src/SIL.XForge.Scripture/ClientApp/src/app/checking/text-and-audio/text-and-audio.component.scss
@use 'src/variables';

.form-container {
  display: flex;
  column-gap: 4px;
  align-items: stretch;
  textarea {
    min-height: 50px;
    max-height: 150px;
  }
  .audio-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    row-gap: 4px;
    min-width: 68px;
    max-height: 100px;
  }
  .border-button {
    width: 100%;
    height: 100%;
    border-style: solid;
    border-radius: 5px;
    border-width: 1px;
    border-color: rgba(0, 0, 0, 0.15);
  }
  .halfHeight {
    height: 50%;
  }
  app-checking-audio-recorder {
    display: flex;
    justify-content: center;
    align-items: center;
    max-height: 100px;

    transition: border-width 0.1s, border-color 0.1s;
  }
  .invalid {
    border-color: #b00020;
    border-width: 2px;
    transition: border-width 0s, border-color 0s;
  }
  .borderless {
    border-width: 0px;
  }
  mat-form-field {
    width: 100%;
    mat-text-field {
      width: 100%;
    }
  }
  ::ng-deep .mat-form-field-wrapper {
    padding-bottom: 0px;
  }
}

.form-helper-text {
  color: variables.$errorColor;
  font-size: 0.75em;
  padding-inline: 10px;
  font-weight: 400;
  text-align: center;
  &:not(.visible) {
    display: none;
  }
}

